[gd_scene load_steps=6 format=3 uid="uid://djly8jwwet4nh"]

[ext_resource type="Script" path="res://components/Game/Game.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ddu26521qqsjd" path="res://components/Spinner/Spinner.tscn" id="2"]
[ext_resource type="TileSet" uid="uid://d1w2w3e7rsp10" path="res://components/Game/TileSet.tres" id="3"]
[ext_resource type="FontFile" path="res://resources/fonts/RobotoLight-32px.tres" id="4"]
[ext_resource type="PackedScene" uid="uid://clkyypjssum55" path="res://components/Button/Button.tscn" id="5"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Spinner" parent="." instance=ExtResource("2")]
visible = false
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2

[node name="Canvas" type="TileMap" parent="."]
scale = Vector2(2, 2)
tile_set = ExtResource("3")
format = 2

[node name="Instructions" type="Label" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.5
offset_top = -96.0
offset_right = 138.5
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4")
text = "Draw by dragging"
horizontal_alignment = 1

[node name="CloseInstructions" parent="Instructions" instance=ExtResource("5")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -46.0
offset_top = -56.0
offset_right = 46.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 0
text = "Ok"

[node name="Address" type="Label" parent="."]
modulate = Color(0.00784314, 0.00784314, 0.00784314, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -618.0
offset_bottom = 54.0
grow_horizontal = 0
text = "Address:"
horizontal_alignment = 2

[node name="CopyLink" parent="." instance=ExtResource("5")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
offset_left = -302.0
offset_top = 57.0
offset_right = -34.0
offset_bottom = 121.0
grow_horizontal = 0
text = "Copy invitation link"

[connection signal="gui_input" from="Background" to="." method="_on_Background_gui_input"]
[connection signal="clicked" from="Instructions/CloseInstructions" to="." method="_on_CloseInstructions_clicked"]
[connection signal="clicked" from="CopyLink" to="." method="_on_copy_link_clicked"]
